@@ -70,7 +70,7 @@ sub prepare_connection {
         $request->address($ip);
     }
 
-    $request->hostname( $ENV{REMOTE_HOST} );
+    $request->hostname( $ENV{REMOTE_HOST} ) if exists $ENV{REMOTE_HOST};
     $request->protocol( $ENV{SERVER_PROTOCOL} );
     $request->user( $ENV{REMOTE_USER} );
     $request->method( $ENV{REQUEST_METHOD} );
